# closure-bazel-samples

./: README.md  WORKSPACE  package.json
src/: BUILD.bazel
src/client/greetings/: BUILD.bazel  greeting-component.js  greeting-service.js  greeting.js
src/server/: BUILD.bazel  index.html  server.js
